--- a/index.html
+++ b/index.html
@@ -6,14 +6,22 @@
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="estilos/style.css">
     <title>Projeto redes sociais</title>
+    
 </head>
 <body>
     <main>
         <section id="telefone">
-            <iframe src="home.html" name="tela" id="tela"></iframe>
+            <iframe src="home.html" name="tela" id="tela" frameborder="0">
+                seu navegador não é compativel com isso.
+            </iframe>
         </section>
         <section id="redes sociais">
-
+            <a href="home.html" target="tela"> <img src="imagens/logo-home.jpg" alt="home"></a>
+            <a href="0" target="tela"> <img src="imagens/logo-youtube.jpg" alt="youtube"></a>
+            <a href="0" target="tela"> <img src="imagens/logo-github.jpg" alt="github"></a>
+            <a href="0" target="tela"> <img src="imagens/logo-instagram.jpg" alt="instagran"></a>
+            <a href="0" target="tela"> <img src="imagens/logo-twitter.jpg" alt="twitter"></a>
+            <a href="0" target="tela"> <img src="imagens/logo-facebook.jpg" alt="facebook"></a>
         </section>
     </main>
 </body>
