--- a/facebook.html
+++ b/facebook.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Youtube</title>
+    <title>facebook</title>
     <link rel="stylesheet" href="estilos/social.css">
 </head>
 <body>
-    <img src="imagens/tela-youtube.png" alt="youtube">
-    <a href="https://www.youtube.com/@CursoemVideo/playlists" target="_blank"> ACESSE</a>
+    <img src="imagens/tela-facebook.jpg" alt="facebook">
+    <a href="https://www.facebook.com/gustavoguanabara/?locale=pt_BR" target="_blank">ACESSE</a>
 </body>
 </html>
