--- a/github.html
+++ b/github.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Youtube</title>
+    <title>github</title>
     <link rel="stylesheet" href="estilos/social.css">
 </head>
 <body>
-    <img src="imagens/tela-youtube.png" alt="youtube">
-    <a href="https://www.youtube.com/@CursoemVideo/playlists" target="_blank"> ACESSE</a>
+    <img src="imagens/tela-github.jpg" alt="GitHub">
+    <a href="https://github.com/cleusonroll/projeto-social" target="_blank">ACESSE</a>
 </body>
 </html>
