--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
         </section>
         <section id="redes sociais">
             <a href="home.html" target="tela"> <img src="imagens/logo-home.jpg" alt="home"></a>
-            <a href="0" target="tela"> <img src="imagens/logo-youtube.jpg" alt="youtube"></a>
-            <a href="0" target="tela"> <img src="imagens/logo-github.jpg" alt="github"></a>
-            <a href="0" target="tela"> <img src="imagens/logo-instagram.jpg" alt="instagran"></a>
-            <a href="0" target="tela"> <img src="imagens/logo-twitter.jpg" alt="twitter"></a>
-            <a href="0" target="tela"> <img src="imagens/logo-facebook.jpg" alt="facebook"></a>
+            <a href="youtube.html" target="tela"> <img src="imagens/logo-youtube.jpg" alt="youtube"></a>
+            <a href="github.html" target="tela"> <img src="imagens/logo-github.jpg" alt="github"></a>
+            <a href="instagran.html" target="tela"> <img src="imagens/logo-instagram.jpg" alt="instagran"></a>
+            <a href="twitter.html" target="tela"> <img src="imagens/logo-twitter.jpg" alt="twitter"></a>
+            <a href="facebook.html" target="tela"> <img src="imagens/logo-facebook.jpg" alt="facebook"></a>
         </section>
     </main>
 </body>
