atualizei minha foto no instagran

--- a/index.html
+++ b/index.html
@@ -6,7 +6,17 @@
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="estilos/style.css">
     <title>Projeto redes sociais</title>
-    
+    <style>
+        body{
+            border-radius: 50%;
+        }
+        body#img{
+    width: 5px;
+    margin: 20px;
+    border-radius: 50%;
+    box-shadow: 2px 2px 5px black;
+        }
+    </style>
 </head>
 <body>
     <main>
