--- a/instagran.html
+++ b/instagran.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="estilos/social.css">
 </head>
 <body>
-    <img src="imagens/tela-instagram.jpg" alt="instagran">
+    <img src="imagens/tela-instagran-crl.jpg" alt="instagran">
     <a href="https://www.instagram.com/rollcleuson/" target="_blank">ACESSE</a>
 </body>
 </html>
